# localeiq

./: .dockerignore  .flake8  .gitignore  .makefile  .makefile_base  .pre-commit-config.yaml  API_DOCUMENTATION.md  API_GUIDELINES.md  API_TERMS_OF_USE.md  Dockerfile  HELP.md  HOWTO.md  PLAN.md  README.md  TESTING.md  alembic.ini  conftest.py  docker-compose.postgres.yaml  docker-compose.yml  justfile  makefile  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  code-reviewer.agent.md
.github/workflows/: ci.yaml  ci.yml  cy.yml
ai/: code_review.sh
alembic/: env.py
alembic/versions/: 050cb4c9f1dc_create_countries_table.py  cd7387cc819b_initial_schema.py  f65cfd9ce7f9_initial_schema.py
app/: main.py
apps/: README.md
apps/cli_tool/: makefile  pyproject.toml
apps/cli_tool/src/cli_tool/: main.py
apps/cli_tool/tests/: cli_tool_test.py
apps/core/: README.md  makefile  pyproject.toml
apps/core/src/core/: main.py
apps/core/src/core/api/middleware/: timer_middleware.py
apps/core/src/core/api/router/chrono/: chrono_router.py  time_router.py  timezone_router.py
apps/core/src/core/api/router/language/: language.py
apps/core/src/core/api/router/locale/: locale.py
apps/core/src/core/api/router/place/: place.py
apps/core/src/core/service/chrono/: chrono_service.py  clock.py
apps/core/tests/api/router/chrono/: time_router_test.py
apps/core/tests/service/chrono/: time_service_test.py
apps/date_time/: README.md  makefile  pyproject.toml
apps/date_time/src/date_time/: main.py  sample.py
apps/date_time/src/date_time/api/: api_dto.py  time_router.py
apps/date_time/src/date_time/api/middleware/: meta_middleware.py  timer_middleware.py  tracer_middleware.py
apps/date_time/src/date_time/api/router/: date_time_dto.py  time_router.py  timezone_router.py  type_response.py
apps/date_time/src/date_time/model/: date_time_dto.py
apps/date_time/src/date_time/service/: clock.py  time_service.py
apps/date_time/tests/: sample_test.py
apps/date_time/tests/api/: time_router_test.py
apps/date_time/tests/api/router/: time_router_test.py
apps/date_time/tests/service/: time_service_test.py
apps/rest_api/: README.md  conftest.py  makefile  pyproject.toml
apps/rest_api/src/rest_api/: main.py  start.py
apps/rest_api/src/rest_api/api/router/chrono/: time_router.py  timezone_router.py
apps/rest_api/src/rest_api/api/router/language/: language_dto.py
apps/rest_api/src/rest_api/api/router/locale/: README.md  locale_dto.py  locale_router.py
apps/rest_api/src/rest_api/api/router/place/: README.md  place_dto.py
apps/rest_api/src/rest_api/dto/: api_dto.py  chrono_dto.py  locale_dto.py
apps/rest_api/src/rest_api/service/chrono/: chrono_service.py
apps/rest_api/src/rest_api/service/locale/: locale_service.py
apps/rest_api/tests/api/router/chrono/: time_router_test.py
apps/rest_api/tests/api/router/locale/: locale_router_test.py
apps/rest_api/tests/service/chrono/: time_service_test.py
culture/: pyproject.toml
culture/tests/: test_culture.py  test_sanity.py
data/: alembic.ini  pyproject.toml
date_time/: pyproject.toml
date_time/tests/: test_date_time_placeholder.py  test_datetime.py
docs/: DEVELOPMENT.md  TODO.md
economic/: pyproject.toml
geopolitical/: pyproject.toml
language/: pyproject.toml
language/tests/: test_placeholder.py
scripts/: setup_env.sh
shared/: pyproject.toml
shared/src/shared/: configuration.py
shared/tests/: test_configuration.py
src/localeiq/: cli.py  main.py  server.py
src/localeiq/config/: settings.py
src/localeiq/db/: base.py  session.py
src/localeiq/db/models/: __init__.py  country.py
src/localeiq/db/schema/: __init__.py  country.py  country_schema.py
src/localeiq/db/schemas/: country.py
src/localeiq/models/: coordinates.py  country.py  location.py  region.py  root_context.py  time_zone.py
src/localeiq/parser/: cldr_territory_parser.py
src/localeiq/repository/: countries_repository.py  country_repository.py  region_repository.py
src/localeiq/routers/: countries.py  countries_router.py  country.py  regions.py  root.py
src/localeiq/services/: country_service.py  region_service.py  regions_service.py  service_factory.py
src/localeiq/util/: configs.py
tests/: test_root.py
tests/routers/: test_countries.py  test_countries_router.py  test_root.py
time/: pyproject.toml
