#========================================================================================
# ROOT-LEVEL pyproject.toml
#
# IMPORTANT:
#   • DO NOT add runtime dependencies here.
#   • DO NOT treat this as a real Python package.
#
# SUBMODULES:
#   Every actual package lives in its own directory with its own pyproject.toml.
#   Use those to manage real dependencies.
#
# PYCHARM QUIRKS:
#   PyCharm may automatically add submodule dependencies to this file when
#   adding dependencies to submodules. This is expected and harmless. Ignore
#   those entries.
#
# WORKFLOW:
#   • Run all dev tasks (test, lint, build) *inside each submodule*.
#   • The root pyproject.toml is ONLY for editor integration and shared dev tools.
#
#========================================================================================
[project]
name = "localeiq"
version = "0.1.0"
description = ""
authors = [
    { name = "Timothy Storm", email = "timothystorm@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.14"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
rest-api = { path = "apps/rest_api", develop = true }
cli-tool = { path = "apps/cli_tool", develop = true }
data-store = { path = "packages/data_store", develop = true }
utils = { path = "packages/utils", develop = true }

[tool.poetry.group.dev.dependencies]
httpx = "^0.24"
mypy = "^1.10"
pre-commit = "^4.5.0"
pytest = "^9.0"
pytest-xdist = "^3.8"
ruff = "^0.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [
    "^alembic/",
    ".*/conftest\\.py$"
]
