[project]
name = "geopolitical"
version = "0.1.0"
description = ""
authors = [
    {name = "Timothy Storm",email = "timothystorm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "geopolitical", from = "src"}]

[tool.poetry.dependencies]
shared = { path = "../shared", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
