[project]
name = "shared"
version = "0.1.0"
description = "Data package for LocaleIQ"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "shared", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
