[project]
name = "cli-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "Timothy Storm",email = "timothystorm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer (>=0.20.0,<0.21.0)"
]

[project.scripts]
liq = "cli_tool.main:app"

[tool.poetry.dependencies]
utils = { path = "../../packages/utils", develop = true }
data_shared = { path = "../../packages/data_store", develop = true }

[tool.poetry]
packages = [{include = "cli_tool", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "ruff (>=0.14.9,<0.15.0)"
]

[tool.mypy]
mypy_path = ["src"]
namespace_packages = true
ignore_missing_imports = true
explicit_package_bases = true
