[project]
name = "date-time"
version = "0.1.0"
description = ""
authors = [
    {name = "Timothy Storm",email = "timothystorm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.123.5,<0.124.0)",
    "pendulum (>=3.1.0,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
]

[tool.poetry.dependencies]
utils = {path = "../../packages/utils", develop = true}
data_shared = {path = "../../packages/data_shared", develop = true}

[tool.poetry]
packages = [{include = "date_time", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "httpx (>=0.28.1,<0.29.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-xdist (>=3.8.0)",
    "ruff (>=0.14.7,<0.15.0)",
]
