[project]
name = "rest_api"
version = "0.1.0"
description = ""
authors = [
    { name = "Timothy Storm", email = "timothystorm@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.123.5,<0.124.0)",
    "pendulum (>=3.1.0,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
]

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
utils = { path = "../../packages/utils", develop = true }
data_store = { path = "../../packages/data_store", develop = true }

[tool.poetry]
packages = [{ include = "rest_api", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
